# facial-auth

./: .env.sample  .gitignore  .gitlab-ci.yml  Dockerfile  docker-compose.debug.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  pytest.ini
backend/src/: main.py
backend/src/alembic/: env.py
backend/src/alembic/versions/: 16882ad1af0b_add_direct_customer_column.py  5b08e610f683_add_app_client_table.py  941ea5c40caf_add_email_verified_column_to_user_model.py  dc44f0ef61f2_add_m2m_relationship_for_client_and_user.py
backend/src/clients/: exceptions.py  models.py  repository.py  routes.py  schemas.py  service.py
backend/src/cognito/: exceptions.py  repository.py  schemas.py  service.py  user_dependency.py  utils.py
backend/src/cognito/lambda_triggers/: create_facial_auth_challenge.py  define_facial_auth_challenge.py  verify_facial_auth_challenge.py
backend/src/core/: config.py  db.py  repository.py  tags.py
backend/src/registration/: dependencies.py  routes.py  schemas.py  service.py  services.py
backend/src/rekognition/: config.py  exceptions.py  service.py
backend/src/s3/: service.py
backend/src/tokens/: __init__.py  config.py  schemas.py  utils.py
backend/src/tokens/certs/: private_key.pem  public_key.pem
backend/src/users/: model.py  models.py  repo.py  schemas.py  service.py
backend/ssl/: cert.pem  key.pem
ci/: build-and-push-images.sh
ci/terraform/: main.tf  terraform.tf  variables.tf
ci/terraform/.terraform/: terraform.tfstate
ci/terraform/modules/ecs/: main.tf  variables.tf
frontend/: .eslintrc.js  Dockerfile  Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/buttons/: PrimaryButton.jsx
frontend/src/components/forms/: FormMessage.jsx  InputField.jsx
frontend/src/components/layout/: Header.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: HomePage.jsx
frontend/src/pages/auth/: ConfirmSignup.jsx  FaceRegistration.jsx  ProfilePage.jsx  Signin.jsx  Signup.jsx
frontend/src/router/: ProtectedLayout.jsx  ProtectedRoute.jsx  RootLayout.jsx  Routes.jsx
frontend/src/styles/: main.scss
frontend/src/styles/abstracts/: _functions.scss  _mixins.scss  _variables.scss
frontend/src/styles/base/: _base.scss  _reset.scss  _typography.scss
frontend/ssl/: cert.pem  key.pem
infrastructure/: build-and-push-images.sh  deploy.sh
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 2b4948bb2f1c_create_user_table.py  6bd9b561b262_add_users_table.py  97ca1acd548a_add_client_table.py  c60936c7c32f_add_user_model.py
src/api/endpoints/: auth.py
src/auth/: repository.py  router.py  service.py  token_service.py  utils.py
src/clients/: model.py
src/cognito/: user_dependency.py
src/core/: config.py  db.py  exceptions.py  repository.py  unit_of_work.py
src/registration/: decorators.py  exceptions.py  routes.py  schemas.py  services.py
src/rekognition/: client.py  config.py  exceptions.py  repository.py  router.py  service.py
src/repositories/: token.py
src/s3/: client.py  config.py  exceptions.py  service.py
src/services/: token.py
src/token_provider/: token_repo.py  token_service.py
src/tokens/: README.md  __init__.py  config.py  utils.py
src/users/: exception.py  model.py  models.py  repo.py  router.py  schemas.py  service.py
(+27 files in other folders)
